--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-github": "vite build --base=/chitchatter/",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "daisyui": "^2.13.6",
     "papaparse": "^5.3.2",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-axios": "^3.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
